--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="prriva_10.App"
+﻿<Application x:Class="Zoomag.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:prriva_10"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Zoomag"
+             StartupUri="/Views/AdminWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
